# sp1-ecdsa

./: Cargo.toml  run.sh
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml  build.sh
program/src/: main.rs
script/: Cargo.toml  prove.sh
